--- a/packages/SystemUI/res/drawable/brightness_progress_full_drawable.xml
+++ b/packages/SystemUI/res/drawable/brightness_progress_full_drawable.xml
@@ -26,13 +26,7 @@
             <corners android:radius="@dimen/rounded_slider_corner_radius"/>
         </shape>
     </item>
-    <item>
-        <shape>
-            <corners android:radius="@dimen/rounded_slider_corner_radius" />
-            <size android:height="@dimen/rounded_slider_height" />
-            <solid android:color="@color/brightness_slider_overlay_color" />
-        </shape>
-    </item>
+    <item android:drawable="@drawable/brightness_slider" />
     <item
         android:id="@+id/slider_icon"
         android:gravity="center_vertical|right"
